--- a/Handout/openswathmetabo.tex
+++ b/Handout/openswathmetabo.tex
@@ -3,19 +3,27 @@
 We would like to present an automated DIA/SWATH analysis workflow for metabolomics, which takes advantage of experiment specific target-decoy assay library generation. This allows for targeted extraction, scoring and statistical validation of metabolomics DIA data \cite{Rost2014}, \cite{Teleman2015}. 
 
 \subsection{Workflow}
-
-The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). 
-
-\paragraph{Candidate identification} Feature detection, adduct grouping and accurate mass search are applied on DDA data. 
-\paragraph{Library construction}  The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library. Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method ensures the consistency of decoy spectra \cite{Scheubert2017}. Targeted extraction - The target-decoy assay library is then used to analyse SWATH data. 
-\paragraph{Targeted extraction} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. 
-\paragraph{Statistical validation} FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
+The workflow follows multiple steps (see Fig. \ref{fig:pipline_overview}). \textbf{Candidate identification.} Feature detection, adduct grouping and accurate mass search are applied on DDA data. \textbf{Library construction.} The knowledge determined from the DDA data, about  compound identification, its potential adduct and the corresponding fragment spectra are used to perform fragment annotation via compositional fragmentation trees sugin SIRIUS 4 \cite{Duhrkop2019}. Afterwards transitions, which are the reference of a precursor to its fragment ions are stored in a so-called assay library (Fig. \ref{fig:assay_library_generation}). Assay libraries usually contain additional metadata (i.e. retention time, peak intensities). FDR estimation is based on the target-decoy approach \cite{Elias2007}. For the generation of the MS2 decoys, the fragmentation tree-based rerooting method by Passatutto ensure the consistency of decoy spectra (Fig.\ref{fig:decoy_generation}) \cite{Scheubert2017}. The target-decoy assay library is then used to analyse the SWATH data. \textbf{Targeted extraction.} Chromatogram extraction and peak-group scoring. This step is performed using an algorithm based on OpenSWATH \cite{Rost2014} for metabolomics data. \textbf{Statistical validation} FDR estimation uses the PyProphet algorithm \cite{Teleman2015}. To prevent overfitting we chose the simpler linear model (LDA) for target-decoy discrimination in PyProphet, using MS1 and MS2 scoring with low correlated scores.
 
 \begin{figure}[!t]
   \centering
-  \includegraphics[width=0.7\textwidth]{openswathmetabo/pipeline_overview.png}
-  \caption{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation. DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree re-rooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data performing targeted extraction, scoring and statistical validation (FDR estimation).}
+  \includegraphics[width=0.7\textwidth]{graphics/openswathmetabo/pipeline_overview.png}
+  \caption{\textbf{DIAMetAlyzer - pipeline for assay library generation and targeted analysis with statistical validation} DDA data is used for candidate identification containing feature detection, adduct grouping and accurate mass search. Library construction uses fragment annotation via compositional fragmentation trees and decoy generation using a fragmentation tree re-rooting method to create a target-decoy assay library. This library is used in a second step to analyse metabolomics DIA data performing targeted extraction, scoring and statistical validation (FDR estimation).}
   \label{fig:pipline_overview}
+\end{figure}
+
+\begin{figure}[!t]
+  \centering
+  \includegraphics[width=0.8\textwidth]{graphics/openswathmetabo/assay_library_generation.png}
+  \caption{\textbf{Assay library generation}  The results of the compound identification (feature, molecular formula, adduct), with the corresponding fragment spectra  for the feature, are used to perform fragment annotation via SIRIUS, using the compositional fragmentation trees. Then, the n highest intensity transitions are extracted and stored in the assay library.}
+  \label{fig:assay_library_generation}
+\end{figure}
+
+\begin{figure}[!t]
+  \centering
+  \includegraphics[width=0.8\textwidth]{graphics/openswathmetabo/decoy_generation.png}
+  \caption{\textbf{Decoy generation} The compositional fragmentations trees from the step above are used to run the fragmentation tree re-rooting method from Passatutto, generating a compound specific decoy MS2 spectrum. Here, the n highest intensity decoy transitions are extracted and stored in the target-decoy assay library.}
+  \label{fig:decoy_generation}
 \end{figure}
 
 \subsection{Prerequisites}
@@ -27,17 +35,17 @@ Here you can install miniconda and follow the further instructions. \\
 
 \begin{enumerate}
   \item Create new conda python environment
-    \begin{listing}
-\begin{minted}{bash}
-    conda create -n py37 python=3.7
-    \end{minted}
-\end{listing} 
-    \item Activate py37 environment
-    \begin{listing}
-\begin{minted}{bash}
-    conda activate py37
-    \end{minted}
-\end{listing} 
+    \begin{lstlisting}
+    	\begin{minted}{bash}
+   			conda create -n py39 python=3.9
+   		\end{minted}	
+    \end{lstlisting} 
+  \item Activate py39 environment
+    \begin{lstlisting}
+    	\begin{minted}{bash}
+    		conda activate py39    
+    	\end{minted}
+    \end{lstlisting} 
   \item Install pip (see above)
   \item On the command line:
     \begin{listing}
@@ -57,17 +65,17 @@ Here you can install miniconda and follow the further instructions. \\
 
 \begin{enumerate}
   \item Create new conda python environment
-    \begin{listing}
-\begin{minted}{bash}
-    conda create -n py37 python=3.7
-    \end{minted}
-\end{listing} 
-    \item Activate py37 environment
-    \begin{listing}
-\begin{minted}{bash}
-    conda activate py37
-    \end{minted}
-\end{listing} 
+    \begin{lstlisting}
+    	\begin{minted}{bash}
+    		conda create -n py39 python=3.9
+    	\end{minted}
+    \end{lstlisting} 
+    \item Activate py39 environment
+    \begin{lstlisting}
+    	\begin{minted}{bash}
+    		conda activate py39
+    	\end{minted}
+    \end{lstlisting} 
   \item On the Terminal:
     \begin{listing}
 \begin{minted}{bash}
@@ -83,7 +91,7 @@ Here you can install miniconda and follow the further instructions. \\
 \subsubsection{Linux}
 Use your package manager apt-get or yum, where possible.
 \begin{enumerate}
-  \item Install Python 3.7 (Debian: python-dev, RedHat: python-devel)
+  \item Install Python 3.9 (Debian: python-dev, RedHat: python-devel)
   \item Install NumPy (Debian / RedHat: python-numpy)
   \item Install setuptools (Debian / RedHat: python-setuptools)
   \item On the Terminal:
@@ -106,7 +114,7 @@ Benchmark DIA samples were prepared by spiking different commercially available 
 \url{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Tutorials/Data/DIAMetAlyzer/}
 
 \subsection{Example Workflow}
-Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (see Fig. \ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.0.1 executable, the DDA data (.mzML), custom libraries and adducts for AccurateMassSearch, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the AssayGeneratorMetabo. The constructed target library is used by the decoy generation node, which calls various python scripts to parse, reformat the input, call Passatutto and export the target-decoy assay library. The target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information.
+Example workflow for the usage of the DIAMetAlyzer Pipeline in KNIME (see Fig. \ref{fig:oswm_example_wf}). Inputs are the SWATH-MS data in profile mode (.mzML), a path for saving the new target-decoy assay library, the SIRIUS 4.9.0 executable, the DDA data (.mzML), custom libraries and adducts for \KNIMENODE{AccurateMassSearch}, the min/max fragment mass-to-charge to be able to restrict the mass of the transitions and the path to the PyProphet executable. The DDA is used for feature detection, adduct grouping, accurate mass search and forwarded to the \KNIMENODE{AssayGeneratorMetabo}. Here, feature mapping is performed to collect MS2 spectra that belong to a feature. All information collected before (feautre, adduct, putative identification, MS2 spectra) are then internally forwarded to SIRIUS. SIRIUS is used for fragment annotation and decoy generation based on the fragmentation tree re-rooting approach. This information is then used to filter spectra/decoys based on their explained intensity (min. 85\%). Afterwards internal feature linking is performed which is most important for untargeted experiments using a lot of DDA data to construct the library. The constructed target-decoy assay library is processed with the SWATH-MS data in OpenSWATH. The results are used by PyProphet for scoring and output a list of metabolites with their respective q-value and quantitative information.
 
 \begin{figure}[!h]
   \centering
@@ -120,7 +128,7 @@ These steps need to be followed to run the workflow successfully:
 
 \begin{itemize}
 \item Add DDA Input Files (.mzML).
-\item Specify SIRIUS 4.0.1 executable.
+\item Specify SIRIUS 4.9.0 executable.
 \item Specify library files (mapping, struct) for \KNIMENODE{AccurateMassSearch}.
 \item Add positive/negative adducts lists for \KNIMENODE{AccurateMassSearch}
 \item Supply an output path for the SIRIUS workspace in the \KNIMENODE{AssayGeneratorMetabo}.
@@ -140,9 +148,6 @@ These steps need to be followed to run the workflow successfully:
 \textit{noise\_threshold\_int} & Intensity threshold below which peaks are regarded as noise. \\
 \textit{chrom\_fwhm} & Expected chromatographic peak width (in seconds). \\
 \textit{mass\_error\_ppm} & Allowed mass deviation (in ppm) \\
-%\textit{algorithm $\rightarrow$ common $\rightarrow$ noise\_threshold\_int} & Intensity threshold below which peaks are regarded as noise. \\
-%\textit{algorithm $\rightarrow$ common $\rightarrow$ chrom\_fwhm} & Expected chromatographic peak width (in seconds). \\
-%\hl{\textit{algorithm $\rightarrow$ mtd $\rightarrow$ mass\_error\_ppm}} & Allowed mass deviation (in ppm) \\
 \end{tabular*}
 \end{center}
 
@@ -152,8 +157,6 @@ These steps need to be followed to run the workflow successfully:
 \textbf{parameter} & \textbf{explanation} \\ \hline
 \textit{mass\_max\_diff} & Maximum allowed mass tolerance per feature.. \\
 \textit{potential\_adducts} & Adducts used to explain mass differences - These should fit to the adduct list specified for AccurateMassSearch. \\
-%\hl{\textit{algorithm $\rightarrow$ MetaboliteFeatureDeconvolution $\rightarrow$ mass\_max\_diff}} & Maximum allowed mass tolerance per feature. \\
-%\hl{\textit{algorithm $\rightarrow$ MetaboliteFeatureDeconvolution $\rightarrow$ potential\_adducts}} & Adducts used to explain mass differences - These should fit to the adduct list specified for AccurateMassSearch. \\
 \end{tabular*}
 \end{center}
 
@@ -172,15 +175,25 @@ These steps need to be followed to run the workflow successfully:
 \textbf{parameter} & \textbf{explanation} \\ \hline
 \textit{min\_transitions} & Minimal number of transitions (3). \\
 \textit{max\_transitions} &  Maximal number of transitions (3). \\
+\textbf{min\_fragment\_mz} & Minimal m/z of a fragment ion choosen as a transition \\
+\textbf{max\_fragment\_mz} & Maximal m/z of a fragment ion choosen as a transition \\
 \textit{transitions\_threshold} & Further transitions need at least x\% of the maximum intensity. \\
+\textbf{fragment\_annotation score\_threshold} & Filters annotations based on the explained intensity of the peaks in a spectrum (0.8). \\
+SIRIUS (internal): & \\
 \textit{out\_workspace\_directory} & Output directory for SIRIUS workspace (Fragmentation Trees). \\
 \textit{filter\_by\_num\_masstraces} &  Features have to have at least x MassTraces. To use this parameter feature\_only is neccessary. \\
 \textit{precursor\_mass\_tolerance} & Tolerance window for precursor selection (Feature selection in regard to the precursor). \\
 \textit{precursor\_rt\_tolerance} & Tolerance allowed for matching MS2 spectra depeding on the feature size (should be around the FWHM of the chromatograms). \\
 \textit{profile} & Specify the used analysis profile (e.g. qtof). \\
 \textit{elements} & Allowed elements for assessing the putative sumformula (e.g. CHNOP[5]S[8]Cl[1]). Elements found in the isotopic pattern are added automatically, but can be specified nonetheless. \\
+Feature linking (internal): & \\
+\textbf{ambiguity\_resolution mz\_tolerance} & M/z tolerance for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance. \\
+\textbf{ambiguity\_resolution rt\_tolerance} & RT tolerance in seconds for the resolution of identification ambiguity over multiple files - Feature linking m/z tolerance.\\
+\textbf{total\_occurrence\_filter} & Filter compound based on total occurrence in analysed samples.\\
 \end{tabular*}
 \end{center}
+
+\noindent In case of the \textbf{total\_occurrence\_filter} the value to chose depends on the analysis strategy used. In the instance you are using only identified compounds (\textbf{use\_known\_unkowns} = false) - it will filter based on identified features. This means that even if the feature was detected in e.g. 50\% of all samples it might be only identified correctly by accurate mass search in 20\% of all samples. Using a \textbf{total\_occurrence\_filter} this specific feature would still be filtered out  due to less identifications. 
 
 \noindent\KNIMENODE{\textbf{OpenSWATH}}:
 \begin{center}
@@ -226,7 +239,4 @@ pyprophet export-compound --in scored.osw --out scored + "_pyprophet_nofilter_ms
 \end{listing}
 \noindent Please see the workflow for actual parameter values used for the benchmarking dataset. \\
 
-
-\noindent  The workflow can be used without any identification (remove \KNIMENODE{AccurateMassSearch}). Here, all features (known\_unknowns) are processed. The assay library is constructed based on the chemical composition elucidated via the fragment annotation. Quantification is possible, unfortunately the decoy generation and FDR estimation for this case is not yet available. 
-
-
+\noindent  The workflow can be used without any identification (remove \KNIMENODE{AccurateMassSearch}). Here, all features (known\_unknowns) are processed. The assay library is constructed based on the chemical composition elucidated via the fragment annotation (SIRIUS 4). It is also possible to use identified and in addition unknown (non-identified) features, by using \KNIMENODE{AccurateMassSearch} in combination with the \textbf{use\_known\_unknowns} in the \KNIMENODE{AssayGeneratorMetabo}.  
